--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.4",
+    "@web3auth/web3auth": "^0.6.2",
+    "magic-sdk": "^7.0.0",
+    "moralis": "^1.5.4",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-moralis": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
