--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-moralis": "^1.3.2"
+    "react-icons": "^4.3.1",
+    "react-moralis": "^1.3.2",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
